--- a/bower.json
+++ b/bower.json
@@ -35,6 +35,7 @@
     "angular-moment": "^1.0.1",
     "angular-i18n": "^1.6.4",
     "angular-tawk-to": "^0.0.2",
-    "angularjs-google-maps": "^0.5.0"
+    "angularjs-google-maps": "^0.5.0",
+    "crypto-js": "^3.1.9"
   }
 }
