--- a/bower.json
+++ b/bower.json
@@ -36,6 +36,8 @@
     "angular-i18n": "^1.6.4",
     "angular-tawk-to": "^0.0.2",
     "angularjs-google-maps": "^0.5.0",
-    "crypto-js": "^3.1.9"
+    "crypto-js": "^3.1.9",
+    "angular-local-storage": "^0.7.1",
+    "postal.js": "^2.0.4"
   }
 }
