--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "DigitalX",
   "license": "",
   "dependencies": {
+    "bower": "^1.8.2",
     "grunt": "^1.0.1",
     "grunt-contrib-less": "^1.4.1",
     "grunt-contrib-uglify": "^3.1.0"
