--- a/bower.json
+++ b/bower.json
@@ -34,7 +34,8 @@
     "postal.js": "^2.0.4",
     "vimeo-upload": "^0.1.5",
     "angular-vimeo-embed": "^0.1.2",
-    "angular-material": "^1.1.5"
+    "angular-material": "^1.1.5",
+    "moment": "^2.19.1"
   },
   "resolutions": {
     "angular": "1.6.6"
