--- a/bower.json
+++ b/bower.json
@@ -35,7 +35,8 @@
     "vimeo-upload": "^0.1.5",
     "angular-vimeo-embed": "^0.1.2",
     "angular-material": "^1.1.5",
-    "moment": "^2.19.1"
+    "moment": "^2.19.1",
+    "angular-toastr": "^2.1.1"
   },
   "resolutions": {
     "angular": "1.6.6"
