--- a/bower.json
+++ b/bower.json
@@ -36,7 +36,8 @@
     "angular-vimeo-embed": "^0.1.2",
     "angular-material": "^1.1.5",
     "moment": "^2.19.1",
-    "angular-toastr": "^2.1.1"
+    "angular-toastr": "^2.1.1",
+    "angular-trix": "^1.0.2"
   },
   "resolutions": {
     "angular": "1.6.6"
