--- a/bower.json
+++ b/bower.json
@@ -38,7 +38,8 @@
     "moment": "^2.19.1",
     "angular-toastr": "^2.1.1",
     "angular-elastic": "^2.5.1",
-    "ngQuill": "ng-quill#^3.5.1"
+    "ngQuill": "ng-quill#^3.5.1",
+    "ng-file-upload": "^12.2.13"
   },
   "resolutions": {
     "angular": "1.6.6"
