--- a/bower.json
+++ b/bower.json
@@ -39,7 +39,8 @@
     "angular-toastr": "^2.1.1",
     "angular-elastic": "^2.5.1",
     "ngQuill": "ng-quill#^3.5.1",
-    "ng-file-upload": "^12.2.13"
+    "ng-file-upload": "^12.2.13",
+    "ng-directive-lazy-image": "afkl-lazy-image#^0.3.4"
   },
   "resolutions": {
     "angular": "1.6.6"
