--- a/bower.json
+++ b/bower.json
@@ -41,7 +41,8 @@
     "ng-file-upload": "^12.2.13",
     "ng-directive-lazy-image": "afkl-lazy-image#^0.3.4",
     "vimeo-player-js": "^2.2.1",
-    "ng-videosharing-embed": "^0.3.8"
+    "ng-videosharing-embed": "^0.3.8",
+    "jquery": "^3.2.1"
   },
   "resolutions": {
     "angular": "1.6.6"
