--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "grunt-contrib-uglify": "^3.1.0",
     "jasmine-core": "^2.8.0",
     "karma": "^1.7.1",
+    "karma-bower": "^1.0.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-jasmine": "^1.1.0"
   }
