--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: node_js
 node_js:
   - "iojs"
   - "7"
+before_script:
+  - npm install -g bower & bower install
 cache:
   directories:
     - "node_modules"
