--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,11 @@ node_js:
   - "7"
 before_script:
   - npm install -g bower & bower install
+
+before_install:
+  - export CHROME_BIN=chromium-browser
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
 cache:
   directories:
     - "node_modules"
